Fix insert query bar being too small

--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -172,4 +172,5 @@ form {
   display: inline-block;
   position: relative;
   margin: 0;
+  width: 100%;
 }
